--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "element-ui": "^2.13.1",
+    "html2canvas": "^1.0.0-rc.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
